--- a/about.html
+++ b/about.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 	<h1>about</h1>
+	<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure tenetur illo eaque blanditiis odit, laborum vero, ducimus ex omnis libero eveniet assumenda consectetur saepe in dolores? Maxime pariatur obcaecati qui.</p>
 </body>
 </html>
